<resources>
    <string name="app_name">DRP25</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="meet_someone_button">meet someone new!</string>
    <string name="back_button">back</string>
    <string name="enter_as_committee">Enter as committee member</string>
    <string name="enter_as_max">Enter as MAX</string>
    <string name="enter_as_kevin">Enter as KEVIN</string>
    <string name="home_profile">profile</string>
    <string name="match_select_match">Select Your Match</string>
    <string name="match_caption">Swipe to see your matches.</string>
    <string name="match_prompt">Send a stamp to start a chat!</string>
    <string name="no_matches">There are no possible matches available.</string>
    <string name="entry_info">Year %s %s</string>
    <string name="entry_shared_interests">Your shared interests</string>
    <string name="entry_match_with">Match with %s</string>
    <string name="matches_descr">matches display</string>
    <string name="match_with_descr">match with X</string>
    <string name="stamp_view_descr">stamp image view</string>
    <string name="interest_prompt">Enter new interest</string>
    <string name="back_to_profile">back to profile</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="personal_info">Personal Info</string>
    <string name="interests">Interests</string>
    <string name="stamps">Stamps</string>
    <string name="stamps_prompt">You don\'t have any stamps yet. Meet new friends to collect stamps.</string>
    <string name="back_to_chats">back to chat page</string>
    <string name="profile_picture_descr">profile picture placeholder</string>
    <string name="rating_descr">interest level rating</string>
    <string name="media_instagram">Instagram</string>
    <string name="media_email">Email</string>
    <string name="ballet_society">BalletSoc</string>
    <string name="ballet_soc_insta">\@balletsoc</string>
    <string name="ballet_soc_email">balletsoc\@outlook.com</string>
    <string name="events_page_title">Upcoming Events</string>
    <string name="broadcast_event">Broadcast</string>
    <string name="events_to_profile">to profile page</string>
    <string name="event_name">Event</string>
    <string name="event_descr">Description of the event.</string>
    <string name="new_event_name">This is a new event with a super long title!</string>
    <string name="new_event_descr">This is the description for the new event.</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="input_box_for_interest">Input box for interest</string>
    <string name="select_interest_s">Select interest(s)</string>
    <string name="update">Update</string>
    <string name="add_new_interest">Add new interest</string>
    <string-array name="interest_array">
        <item>Anime</item>
        <item>Archery</item>
        <item>Art</item>
        <item>Astronomy</item>
        <item>Badminton</item>
        <item>Baking</item>
        <item>Ballet</item>
        <item>Baseball and Softball</item>
        <item>Basketball</item>
        <item>Bridge</item>
        <item>Caving</item>
        <item>Charity and Volunteering</item>
        <item>Choir and Chamber Music</item>
        <item>Chess</item>
        <item>Cycling</item>
        <item>Dance</item>
        <item>Dogs</item>
        <item>Drama</item>
        <item>Environmental</item>
        <item>Football</item>
        <item>Fencing</item>
        <item>Films and Movies</item>
        <item>Gaming and E-sports</item>
        <item>Golf</item>
        <item>Hip Hop</item>
        <item>History</item>
        <item>Hockey</item>
        <item>Jazz, Soul and Funk</item>
        <item>K-pop</item>
        <item>Knitting</item>
        <item>Lacrosse</item>
        <item>Martial Arts</item>
        <item>Model United Nations</item>
        <item>Mountaineering</item>
        <item>Musical Theatre</item>
        <item>Netball</item>
        <item>Orchestra</item>
        <item>Photography</item>
        <item>Poker</item>
        <item>Pokemon</item>
        <item>Radio</item>
        <item>Rail and Transport</item>
        <item>Robotics</item>
        <item>Rugby</item>
        <item>Science Fiction and Fantasy</item>
        <item>Skating</item>
        <item>Snooker and Pool</item>
        <item>Squash</item>
        <item>Tabletop Gaming</item>
        <item>Tennis</item>
        <item>Volleyball</item>
    </string-array>
    <string-array name="category_array">
        <item>None</item>
        <item>Academic related</item>
        <item>Arts &amp; Entertainment</item>
        <item>Charitable</item>
        <item>Indoor</item>
        <item>Outdoor</item>
        <item>Social</item>
        <item>Sports</item>
    </string-array>
    <string name="title_activity_club_interest">ClubInterestActivity</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="event_name_prompt">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_description">Event Description</string>
    <string name="list_of_events">list of events</string>
    <string name="upcoming_events_related_to_your_interests">Upcoming events</string>
</resources>