<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/profile_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_send"
            android:text="@string/back_button"
            android:textAlignment="viewStart"
            android:outlineProvider="none"/>

        <!-- Determined by user profile. -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/text_margin_16"
            android:text="@string/kevin"
            android:textSize="24sp"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Determined by user profile. -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/stream_ui_picture_placeholder"
                android:contentDescription="@string/profile_picture_descr"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_margin_32"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin_32"
                android:layout_marginTop="@dimen/text_margin_32"
                android:layout_marginBottom="@dimen/text_margin_16"
                android:text="@string/personal_info"
                android:textSize="24sp"/>

            <!-- Determined by user profile. -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_32"
                android:layout_marginRight="@dimen/text_margin_32"
                android:text="@string/kevin_info"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin_32"
                android:layout_marginTop="@dimen/text_margin_32"
                android:layout_marginBottom="@dimen/text_margin_16"
                android:text="@string/interests"
                android:textSize="28sp"/>

            <!-- Determined by user profile. -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_32"
                android:layout_marginRight="@dimen/text_margin_32"
                android:text="@string/kevin_interests"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin_32"
                android:layout_marginTop="@dimen/text_margin_32"
                android:layout_marginBottom="@dimen/text_margin_16"
                android:text="@string/stamps"
                android:textSize="28sp"/>

            <!-- Determined by user profile. -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_32"
                android:layout_marginRight="@dimen/text_margin_32"
                android:text="@string/stamps_prompt"
                android:textSize="20sp"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/profile_match_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_send"
            android:text="@string/meet_someone_button"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>