<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommitteeProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/stream_ui_literal_transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/profile_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/arrow_back"
            android:contentDescription="@string/back_to_chats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Determined by user profile. -->
        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/text_margin_16"
            android:textColor="@color/stream_ui_black"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent">

            <!-- Determined by user profile. -->
            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:scaleType="centerCrop"
                android:src="@drawable/stream_ui_picture_placeholder"
                android:contentDescription="@string/profile_picture_descr"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_margin_32"/>

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/stream_ui_blue_alice"
                android:textColor="@color/stream_ui_accent_blue"
                android:text="@string/upload_profile_picture"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin_32"
                android:layout_marginTop="@dimen/text_margin_32"
                android:layout_marginBottom="@dimen/text_margin_16"
                android:text="@string/personal_info"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <!-- Determined by user profile. -->
            <TextView
                android:id="@+id/personal_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_32"
                android:layout_marginRight="@dimen/text_margin_32"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/text_margin_32"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/text_margin_32"
                    android:layout_marginTop="0dp"
                    android:text="@string/interests"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/update_interests_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/update"
                    android:textColor="@color/stream_ui_accent_blue"
                    android:backgroundTint="@color/stream_ui_blue_alice"
                    android:textSize="16sp" />

            </LinearLayout>

            <!-- Determined by user profile. -->

            <TableLayout
                android:id="@+id/interests_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_32"
                android:layout_marginRight="@dimen/text_margin_32">
            </TableLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>